@@ -53,21 +53,24 @@ the following:
 
 In addition to these, the environment MAY include the following properties:
 
-  - contentType       The HTTP Content-Type of the data in the request body
   - contentLength     The HTTP Content-Length of the request body
+  - contentType       The HTTP Content-Type of the data in the request body
   - flash             A string containing the flash message, if any. This is a
                       message that was set using the flash module and is
                       available to all applications downstream from a
                       strata.flash middleware
-  - session           An object containing session data. Available to all
-                      applications downstream from a strata.sessionCookie
-                      middleware
-  - route             An object containing information about the route that was
-                      triggered. Available to all applications downstream from a
-                      strata.Router application
   - remoteUser        A string containing the name of the authorized user when
                       using HTTP basic auth. Available to all applications
                       downstream from a strata.authBasic middleware
+  - route             An object containing information about the route that was
+                      triggered. Available to all applications downstream from a
+                      strata.Router application
+  - session           An object containing session data. Available to all
+                      applications downstream from a strata.sessionCookie
+                      middleware
+  - timeout           The numerical id of the timeout set by the timeout
+                      middleware. May be used to cancel the timeout using
+                      the clearTimeout function by downstream apps
 
 When combined with scriptName and pathInfo, the serverName and serverPort
 variables may be used to reconstruct the original request URL. Note, however,
