@@ -12,15 +12,15 @@ module.exports = function (app, expiry, timeoutHandler) {
     timeoutHandler = timeoutHandler || utils.serverError;
 
     return function timeout(env, callback) {
-        var timer = setTimeout(function () {
-            timer = null;
+        env.timeout = setTimeout(function () {
+            env.timeout = null;
             timeoutHandler(env, callback);
         }, expiry);
 
         app(env, function (status, headers, body) {
-            if (timer) {
-                clearTimeout(timer);
-                timer = null;
+            if (env.timeout) {
+                clearTimeout(env.timeout);
+                env.timeout = null;
                 callback(status, headers, body);
             }
         });
